<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/caramel"
    android:orientation="vertical"
    android:padding="40dp">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:contentDescription="@string/plum_is"
        android:text="@string/plum"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:contentDescription="@string/blue_is"
        android:text="@string/blue"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:contentDescription="@string/gold_is"
        android:text="@string/gold"/>

</LinearLayout>